<resources>
    <string name="app_name">Space Quiz</string>

    <string name="question1">Which of the following are planets in our solar system?</string>
    <string name="question1_answer1">Pluto</string>
    <string name="question1_answer2">Venus</string>
    <string name="question1_answer3">Minnie</string>
    <string name="question1_answer4">Saturn</string>

    <string name="question2">How long does it take for light from the sun to reach the earth?</string>
    <string name="question2_answer1">0 s</string>
    <string name="question2_answer2">1 h</string>
    <string name="question2_answer3">8 min</string>
    <string name="question2_answer4">1 day</string>

    <string name="question3">The sun is a star.</string>
    <string name="yes">True</string>
    <string name="no">False</string>

    <string name="question4">What is the name of the second planet from the sun?</string>
    <string name="question4_hint">Write your answer here</string>
</resources>
