<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.educationalapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/question1_answer1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_answer1"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/question1_answer2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_answer2"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/question1_answer3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_answer3"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/question1_answer4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_answer4"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/question2_answer1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_answer1"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:id="@+id/question2_answer2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_answer2"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:id="@+id/question2_answer3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_answer3"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:id="@+id/question2_answer4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_answer4"
                        android:layout_weight="1"/>
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:layout_weight="1"/>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    />
                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question4_hint"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <Button
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Check"
                android:textAllCaps="true"
                android:onClick="checkAnswers"
                android:layout_centerInParent="true"/>

        </RelativeLayout>



    </LinearLayout>

</ScrollView>